[Section-1: Getting Started] chore: Creating simple Spring boot app with out security-part-2 Creating our first controller, add log to the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=app-bank
+spring.application.name=${SPRING_APP_NAME:app-bank}
+logging.pattern.console = ${LOG_PATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
