--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=${SPRING_APP_NAME:app-bank}
+spring.security.user.name=${SECURITY_USERNAME:simaoneto}
+spring.security.user.password=${SECURITY_PASSWORD:123}
 logging.pattern.console = ${LOG_PATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
