[Section 6: Understanding Authentication Provider and Implementing it] feat: Make classes to authentication provider to the prod.

--- a/src/main/resources/application_prod.yml
+++ b/src/main/resources/application_prod.yml
@@ -17,7 +17,7 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
-    generate-ddl: true
+    generate-ddl: false
   logging:
     pattern:
       console: '%clr(%d{dd-MM-yyyy HH:mm:ss}){faint} %clr(%5p) %clr([%t]){faint} %clr(%-40.40logger){cyan} %clr(:){yellow} %m%n'
