--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,5 +47,7 @@ logging:
   log4j2:
     pattern:
       console: ${LOG_PATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
-
-
+server:
+  servlet:
+    session:
+      timeout: ${SESSION_TIMEOUT:20m}
